refactor: Remove dead code
Some of this is just setting defaults, it really doesn't need to be
there.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </script>
 </head>
 <body>
-  <section class="book" id="example-element" style="scroll-padding-left: 0px;">
+  <section class="book">
     <article class="page">
       <p>Chapter 1: The Unlikely Beginnings</p>
       <p>In the quaint village of Wintervale, nestled between towering snow-capped mountains, lived a young girl named Seraphina Snowbrook. Orphaned at a tender age, she resided with her uncle, who worked tirelessly at the local bookstore, "Wise Words and Wonders." Though life was ordinary, Seraphina felt an unexplainable void, as if she were waiting for something extraordinary to happen.</p>
